Adding Allure